--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/swagger": "^11.0.3",
     "@nestjs/typeorm": "^11.0.0",
     "@types/cookie-session": "^2.0.49",
+    "@types/express": "^5.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-session": "^2.1.0",
