--- a/render.yaml
+++ b/render.yaml
@@ -10,12 +10,12 @@ services:
         value: production
       - key: DATABASE_URL
         fromDatabase:
-          name: my-car-value-db
+          name: dpg-cuibdqan91rc73bhjjjg-a
           property: connectionString
       - key: COOKIE_KEY
         generateValue: true
 
 databases:
-  - name: my-car-value-db
+  - name: dpg-cuibdqan91rc73bhjjjg-a
     plan: free
     ipAllowList: []
